--- a/And0729_05_Quiz_SDMem/app/src/main/res/layout/activity_main.xml
+++ b/And0729_05_Quiz_SDMem/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,8 @@
         android:layout_height="wrap_content"
         android:text="문제 "
         android:textSize="25dp"
-        android:layout_margin="15dp"/>
+        android:layout_margin="15dp"
+        android:id="@+id/tvNum"/>
     <LinearLayout
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
@@ -34,7 +35,8 @@
         android:layout_weight="2"
         android:layout_height="wrap_content"
         android:text="문제"
-        android:textSize="20dp"/>
+        android:textSize="20dp"
+        android:id="@+id/tvQuiz"/>
     </LinearLayout>
     <LinearLayout
         android:layout_marginLeft="20dp"
@@ -42,7 +44,7 @@
         android:layout_marginBottom="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    <TextView android:id="@+id/txtName"
+    <TextView android:id="@+id/tvOX"
         android:background="#FFF9C4"
         android:layout_width="0dp"
         android:layout_weight="2"
@@ -52,15 +54,21 @@
         android:gravity="center"
         />
     </LinearLayout>
-    <GridLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:columnCount="2">
-        <EditText android:text="                                                                "
-            android:id="@+id/edt"/>
+        android:layout_height="wrap_content">
+        <EditText android:text=""
+            android:id="@+id/edAns"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"/>
         <Button android:text="입력"
-            android:id="@+id/btn"/>
-    </GridLayout>
+            android:id="@+id/btnIn"
+            android:enabled="false"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
     <LinearLayout
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
@@ -73,13 +81,14 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="시작"
-            android:id="@+id/btn2"/>
+            android:id="@+id/btnStart"/>
         <Button android:layout_margin="5dp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="다음"
-            android:id="@+id/btn3"/>
+            android:enabled="false"
+            android:id="@+id/btnNext"/>
     </LinearLayout>
 
 </LinearLayout>
