--- a/And0801_02_ativityOne/app/src/main/res/layout/activity_second.xml
+++ b/And0801_02_ativityOne/app/src/main/res/layout/activity_second.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".SecondActivity">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtContent2"
+        android:text="넘겨 받은 내용 : "
+        android:textSize="20dp"/>
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
