--- a/And0803_02_Db1/app/src/main/res/layout/activity_main.xml
+++ b/And0803_02_Db1/app/src/main/res/layout/activity_main.xml
@@ -42,24 +42,36 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <Button android:layout_margin="10dp"
+        <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="초기화"
             android:id="@+id/btnClear"/>
-        <Button android:layout_margin="10dp"
+        <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="입력"
             android:id="@+id/btnInsert"/>
-        <Button android:layout_margin="10dp"
+        <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="조회"
             android:id="@+id/btnSelect"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="수정"
+            android:id="@+id/btnUpdate"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="삭제"
+            android:id="@+id/btnDelete"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
